--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,3 +25,21 @@ body {
     )
     rgb(var(--background-start-rgb));
 }
+
+
+#error {
+  display: none;
+}
+
+#draggable {
+  display: none;
+  background-color: black;
+  color: white;
+  padding: 10px;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.shown {
+  display: inline-block !important;
+}
